Fixed problem with map resizing incorrectly when changing between pages by preventing the setting of display: none;  Instead we set the visibility of the layer close to zero.  This gives the same effect but doesn't have the ill effects that are caused by hiding the map object

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -14,6 +14,10 @@ body
   z-index:1;
 }
 
+#mapPage {
+	display: block !important;
+}
+
 #banner {
 	display:none;
 }
